# GTBot

./: .env  .env.example  .gitignore  DEPENDENCIES.md  README.md  bot.py  plugins.7z  pyproject.toml  pyrightconfig.json  requirements.txt  识图提示词.txt
local_plugins/: __init__.py
local_plugins/nonebot_plugin_gt_help/: __init__.py
local_plugins/nonebot_plugin_gt_permission/: __init__.py
plugins/: Permissions.py  __init__.py  permission_config.json  respondent_approval.py  status.py  重启.py
plugins/GTBot/: AdminHandlers.py  CacheManager.py  Chat.py  ChatAccessHandlers.py  ChatAccessManager.py  ChatCore.py  ChatLatencyHandlers.py  ChatMessageLogger.py  ChatTriggers.py  ConfigManager.py  DBmodel.py  Fun.py  GTBot配置完整指南.md  GroupAutoTriggerHandlers.py  GroupAutoTriggerManager.py  GroupChatContext.py  GroupKeywordTriggerHandlers.py  GroupKeywordTriggerManager.py  GroupMessageQueueManager.py  HelpHandlers.py  HelpRegistry.py  Internal_tools.py  LLM_Tools.py  Logger.py  MassageManager.py  PermissionManager.py  PrivateMessageQueueManager.py  QueueMessagePayload.py  UserCacheManager.py  UserProfileManager.py  __init__.py  cache_tasks.py  chat_adapter.py  constants.py  group_auto_trigger_tasks.py  import re  llm_provider.py  message_segments.py  model.py  test_data_config.py  (+2 more)
plugins/GTBot/config/: README_SETUP.md  api_config.json copy.example  api_config.json.example  config.json.example  config_group.json  create_templates.bat  配置指南.md
plugins/GTBot/docs/: 响应锁机制说明.md  插件系统代码改造计划.md  插件系统技术方案文档.md  插件系统需求文档.md  插件编写指南.md  缓存管理机制文档.md  被拒绝时的表情贴回应.md  锁机制实现改动总结.md  锁机制快速开始.md  锁机制改为拒绝模式说明.md  锁机制满载时的行为说明.md
plugins/GTBot/services/: __init__.py  tool_loader.py
plugins/GTBot/services/LongMemory/: EventLogManager.py  GroupProfileSQLite.py  IngestManager.py  MappingManager.py  PublicKnowledge.py  RecallManager.py  UserProfile.py  VectorGenerator.py  __init__.py  migrate_bak_to_longmemory.py  model.py  notepad.py  qdrant_user_profile.py  tool.py  用户画像管理器使用说明.md
plugins/GTBot/services/access/: __init__.py
plugins/GTBot/services/cache/: __init__.py  jobs.py
plugins/GTBot/services/chat/: __init__.py  context.py  continuation.py  group_queue.py  internal_tools.py  latency_chart.py  latency_monitor.py  output_xml.py  private_queue.py  queue_payload.py  runtime.py
plugins/GTBot/test/: test_chat_adapter_unit.py  test_chat_latency_handlers_unit.py  test_chat_latency_monitor_unit.py  test_chat_latency_runtime_unit.py  test_chatcore_pre_agent_processor_unit.py  test_config_manager_unit.py  test_continuation_unit.py  test_group_auto_trigger_unit.py  test_llm_provider_unit.py  test_long_memory_plugin_migration_unit.py  test_long_memory_rerank_api_unit.py  test_non_long_memory_plugin_migration_unit.py
plugins/GTBot/tools/: _GroupChatContext.py  _api.py  debug_llm_memory.py  demo_plugin.py  tavily_search_plugin.config.json.example  tavily_search_plugin.py  test.py  thinking.py
plugins/chatai/: # ChromaDB 消息处理流程详解.md  #配置接口更新文档.md  ChatLogRetrievalManager.py  GPTSoVITSManager.py  KnowledgeBaseManager.py  NChatLogRetrievalManager.py  NKnowledgeBaseManager.py  NRAGmanager.py  Permissions.py  RAGmanager.py  SQLiteManager.py  SessionManager.py  VectorDatabaseSystem copy.py  VectorDatabaseSystem.py  __init__.py  api_config.json  chatgpt.py  config.json  config.toml  config_group.toml  config_manager.py  count_lines.py  fun.py  main - 副本.py  main.py  nonebotSQL.py  notebook.md  record.py  testl.py  timeer.py  ttttttt.py  功能说明文档.md  向量数据库元数据示例.md  向量数据库元数据示例.txt  获取最后一条单条消息的索引，可以用get的方法，同时去限制group id和ty.ini
plugins/chatai/ai_database/: chroma.sqlite3
plugins/chatai/configs/: api_config.json  config_group.toml  default_config_group.toml.bak  tts_config.json
plugins/chatai/data/: data.db  data.db-shm  data.db-wal  default_data.db  default_image_cache.db  image_cache.db  image_cache.db-shm  image_cache.db-wal
plugins/chatai/docs/: # ChromaDB 消息处理流程详解.md  向量数据库元数据示例.md
plugins/chatai/prompts/: 知识库管理员提示词.txt
plugins/chatai/test_dir/: deepseek_no_think_models_result.json  deepseek_think_models_result_ollama.json  glm_no_think_models_result.json  glm_think_models_result.json  gpt_think_models_result.json  qwen3-235b-a22b_no_think_text_models_result_ollama.json  qwen3-235b-a22b_think_models_result_ollama.json  qwen3_no_think_text_models_result_ollama.json  qwen3_think_models_result_ollama.json  qwen_no_think_models_result.json  qwen_no_think_models_result_ollama.json  qwen_think_models_result.json
plugins/log_backup/: __init__.py  config.json  config.json.example
plugins/nonebot_plugin_group_gatekeeper/: __init__.py  commands.py  store.py
plugins/nonebot_plugin_gt_help/: __init__.py
plugins/nonebot_plugin_gt_permission/: __init__.py  commands.py  config.py  manager.py  test_permission_manager.py
plugins/restart_plugin/: Permissions.py  __init__.py  permission_config.json  permission_config.json.example  restart_time.txt
scripts/: llm_cli.py  test_dashscope_openai_compatible_agent.py
(+143 files in other folders)
