[project]
name = "ggz"
version = "0.1.0"
description = "ggz"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-plugin-apscheduler>=0.3.0",
    "numpy>=1.26.0",
    "qdrant-client>=1.9.0"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
