[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ggz-bot"
version = "0.1.0"
description = "NoneBot2-based QQ bot project without ChatAI plugin dependencies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-status>=0.1.3",
    "nonebot2>=2.3.0",
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
    "pydantic>=2.8.0",
    "qdrant-client>=1.10.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "SQLAlchemy>=2.0.0",
    "sympy>=1.13.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
cli = [
    "prompt-toolkit>=3.0.47",
]
langchain-adapters = [
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
]
providers = [
    "dashscope>=1.23.0",
    "ggz-bot[langchain-adapters]",
]

[tool.setuptools]
py-modules = ["bot"]

[tool.setuptools.packages.find]
include = ["plugins*"]
exclude = ["plugins.chatai*"]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_status"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
